# mpress

./: .gitignore  INSTALL.md  README.md  main.py  mpress.spec  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
mpress/: __init__.py  cli.py  file_handler.py  image_compressor.py  utils.py  video_compressor.py
specs/001-compress-media/: plan.md  spec.md  tasks.md
specs/001-compress-media/checklists/: requirements.md  tasks.md
tests/: __init__.py  test_file_handler.py  test_image_compressor.py  test_video_compressor.py
